--- a/requirements.txt
+++ b/requirements.txt
@@ -1,14 +1,29 @@
+amqp==5.1.1
 aniso8601==9.0.1
+billiard==4.1.0
 blinker==1.6.2
+celery==5.3.4
 click==8.1.7
+click-didyoumean==0.3.0
+click-plugins==1.1.1
+click-repl==0.3.0
+colorama==0.4.6
 Flask==2.3.3
 Flask-RESTful==0.3.10
 Flask-SQLAlchemy==3.1.1
 itsdangerous==2.1.2
 Jinja2==3.1.2
+kombu==5.3.2
 MarkupSafe==2.1.3
+prompt-toolkit==3.0.39
+python-dateutil==2.8.2
+python-vuejs==1.0.9
 pytz==2023.3.post1
+redis==5.0.0
 six==1.16.0
 SQLAlchemy==2.0.20
 typing_extensions==4.7.1
+tzdata==2023.3
+vine==5.0.0
+wcwidth==0.2.6
 Werkzeug==2.3.7
