--- a/requirements.txt
+++ b/requirements.txt
@@ -34,6 +34,7 @@ Flask-Security-Too==5.0.0
 Flask-SQLAlchemy==3.1.1
 Flask-WTF==1.1.1
 fonttools==4.43.1
+gunicorn==21.2.0
 html5lib==1.1
 httplib2==0.22.0
 idna==3.4
